docs: refactor nodejs installation steps for blog tutorial

--- a/src/pages/en/tutorial/1-setup/1.mdx
+++ b/src/pages/en/tutorial/1-setup/1.mdx
@@ -26,15 +26,22 @@ You will use a **command line (terminal)** to create your Astro project and to r
 
 You can access the command line through a local terminal program for your operating system. Common applications include **Terminal** (MacOS/Linux), **Command Prompt** (Windows), and **Termux** (Android). One of these will probably already be on your machine. 
 
-For Astro to run on your system, you will also need to have [**Node.js**](https://nodejs.org/en/) installed. To check to see whether you already have a compatible version (`v16.12.0` or higher) installed: 
+### Node.js
 
-1. Launch your terminal and type the following into the command line:
+For Astro to run on your system, you also need to have [**Node.js**](https://nodejs.org/en/) of version `v16.12.0` or later.
+First, check whether you already have Node.js installed and check the installed version. To do this, run the following command in your terminal:
 
-    ```sh
-    node -v
-    ```
+```sh
+node -v
 
-2. If necessary, follow the instructions to [install Node.js](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm) via the command line.
+// Example output
+v16.14.0
+```
+
+* If the command returns a version number higher than `v16.12.0`, you're good to go! 🎉 If not, you need to install the compatible Node.js version.
+* If the command returns an error message like `Command 'node' not found`, Node.js is not installed in your system.
+
+To install Node.js (or the compatible version), follow [this guide](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm).
 
 ### Code Editor
 
