--- a/src/pages/en/guides/images.mdx
+++ b/src/pages/en/guides/images.mdx
@@ -29,6 +29,17 @@ import rocket from '../images/rocket.svg';
 <img src={rocket} alt="A rocketship in space."/>
 ```
 
+:::caution
+The official [image integration](#astros-image-integration) will change image imports to return an object.
+If you're using the image integration, add `?url` to your imports to achieve the above behavior.
+```astro
+---
+import rocket from '../images/rocket.svg?url';
+---
+<img src={rocket} alt="A rocketship in space."/>
+```
+:::
+
 ### In Markdown files
 
 You can use standard Markdown `![]()` syntax or standard HTML `<img>` tags in your `.md` files for images located in your `public/` folder, or remote images on another server.
@@ -93,7 +104,7 @@ Import them from a **relative file path** or [import alias](/en/guides/aliases/)
 // src/pages/index.astro
 
 // Access images in `src/images/`
-import logo from '../images/logo.png';
+import logo from '../images/logo.png?url';
 ---
 <img src={logo} width="40" alt="Astro" />
 ```
@@ -128,6 +139,9 @@ This component is useful for images where you want to keep a consistent size acr
 
 For responsive images, or art direction, use the `<Picture />` component instead.
 
+:::note
+Installing the image integration
+:::
 #### Local Images in `src/`
 
 (required attributes: [`src`](/en/guides/integrations-guide/image/#src), and [`alt`](/en/guides/integrations-guide/image/#alt))
