clearer language and highlight

--- a/src/pages/en/guides/images.mdx
+++ b/src/pages/en/guides/images.mdx
@@ -31,8 +31,8 @@ import rocket from '../images/rocket.svg';
 
 :::caution
 The official [image integration](#astros-image-integration) will change image imports to return an object.
-If you're using the image integration, add `?url` to your imports to achieve the above behavior.
-```astro
+If you have the image integration installed, add `?url` to your imports when using `<img>`.
+```astro "?url"
 ---
 import rocket from '../images/rocket.svg?url';
 ---
