--- a/src/pages/en/guides/images.mdx
+++ b/src/pages/en/guides/images.mdx
@@ -17,7 +17,7 @@ The `src` attribute is required, and its format will depend on where your images
 
 ```astro title="src/pages/index.astro"
 ---
-import rocket from '../images/rocket.svg?url';
+import rocket from '../images/rocket.svg';
 ---
 <!-- Remote image on another server -->
 <img src="https://astro.build/assets/logo.png" width="25" alt="Astro">
@@ -34,7 +34,7 @@ The official [image integration](#astros-image-integration) will change image im
 If you have the image integration installed, add `?url` to your imports when using `<img>`.
 ```astro "?url"
 ---
-import rocket from '../images/rocket.svg?url';
+import rocket from '../images/rocket.svg';
 ---
 <img src={rocket} alt="A rocketship in space."/>
 ```
@@ -68,7 +68,7 @@ Additionally, you can import and use images located in your project's `src/` dir
 
 ```mdx title="src/pages/post-1.mdx"
 
-import rocket from '../images/rocket.svg?url';
+import rocket from '../images/rocket.svg';
 
 # My MDX Page
 
