oops, removed one too many

--- a/src/pages/en/guides/images.mdx
+++ b/src/pages/en/guides/images.mdx
@@ -34,7 +34,7 @@ The official [image integration](#astros-image-integration) will change image im
 If you have the image integration installed, add `?url` to your imports when using `<img>`.
 ```astro "?url"
 ---
-import rocket from '../images/rocket.svg';
+import rocket from '../images/rocket.svg?url';
 ---
 <img src={rocket} alt="A rocketship in space."/>
 ```
