remove last accidental ?url

--- a/src/pages/en/guides/images.mdx
+++ b/src/pages/en/guides/images.mdx
@@ -104,7 +104,7 @@ Import them from a **relative file path** or [import alias](/en/guides/aliases/)
 // src/pages/index.astro
 
 // Access images in `src/images/`
-import logo from '../images/logo.png?url';
+import logo from '../images/logo.png';
 ---
 <img src={logo} width="40" alt="Astro" />
 ```
