Clean up custom use of Tabs component

--- a/src/content/docs/zh-cn/core-concepts/sharing-state.mdx
+++ b/src/content/docs/zh-cn/core-concepts/sharing-state.mdx
@@ -2,9 +2,9 @@
 title: 状态共享
 i18nReady: false
 ---
-import Tabs from '~/components/tabs/Tabs'
 import UIFrameworkTabs from '~/components/tabs/UIFrameworkTabs.astro'
 import LoopingVideo from '~/components/LoopingVideo.astro'
+import JavascriptFlavorTabs from '~/components/tabs/JavascriptFlavorTabs.astro'
 
 
 当我们使用 [群岛结构 / 部分激活](/zh-cn/concepts/islands/)，你可能会遇到这样的问题：**我想在我的组件之间共享状态。**
@@ -320,97 +320,93 @@ export default function CartFlyout() {
 让我们在先前的 `cartStore.js` 中添加一个 `cartItem` 状态库。如果你愿意的话，你也可以使用 TypeScript 文件来定义。
 
 
-<Tabs client:visible sharedStore="js-ts">
-<Fragment slot="tab.js">JavaScript</Fragment>
-<Fragment slot="tab.ts">TypeScript</Fragment>
-<Fragment slot="panel.js">
-```js
-// src/cartStore.js
-import { atom, map } from 'nanostores';
+<JavascriptFlavorTabs>
+  <Fragment slot="js">
+  ```js
+  // src/cartStore.js
+  import { atom, map } from 'nanostores';
 
-export const isCartOpen = atom(false);
+  export const isCartOpen = atom(false);
 
-/**
- * @typedef {Object} CartItem
- * @property {string} id
- * @property {string} name
- * @property {string} imageSrc
- * @property {number} quantity
- */
+  /**
+  * @typedef {Object} CartItem
+  * @property {string} id
+  * @property {string} name
+  * @property {string} imageSrc
+  * @property {number} quantity
+  */
 
-/** @type {import('nanostores').MapStore<Record<string, CartItem>>} */
-export const cartItems = map({});
+  /** @type {import('nanostores').MapStore<Record<string, CartItem>>} */
+  export const cartItems = map({});
 
-```
-</Fragment>
-<Fragment slot="panel.ts">
-```ts
-// src/cartStore.ts
-import { atom, map } from 'nanostores';
+  ```
+  </Fragment>
+  <Fragment slot="ts">
+  ```ts
+  // src/cartStore.ts
+  import { atom, map } from 'nanostores';
 
-export const isCartOpen = atom(false);
+  export const isCartOpen = atom(false);
 
-export type CartItem = {
-  id: string;
-  name: string;
-  imageSrc: string;
-  quantity: number;
-}
+  export type CartItem = {
+    id: string;
+    name: string;
+    imageSrc: string;
+    quantity: number;
+  }
 
-export const cartItems = map<Record<string, CartItem>>({});
-```
-</Fragment>
-</Tabs>
+  export const cartItems = map<Record<string, CartItem>>({});
+  ```
+  </Fragment>
+</JavascriptFlavorTabs>
 
 现在，让我们导出一个 `addCartItem` 函数供我们的组件使用。
 - **如果你的购物车中不存在该商品**，添加商品并设置初始数量 1。
 - **如果购物车中 *已经* 存在该商品**，则将该商品数量增加 1。
 
-<Tabs client:visible sharedStore="js-ts">
-<Fragment slot="tab.js">JavaScript</Fragment>
-<Fragment slot="tab.ts">TypeScript</Fragment>
-<Fragment slot="panel.js">
-```js
-// src/cartStore.js
-...
-export function addCartItem({ id, name, imageSrc }) {
-  const existingEntry = cartItems.get()[id];
-  if (existingEntry) {
-    cartItems.setKey(id, {
-      ...existingEntry,
-      quantity: existingEntry.quantity + 1,
-    })
-  } else {
-    cartItems.setKey(
-      id,
-      { id, name, imageSrc, quantity: 1 }
-    );
+<JavascriptFlavorTabs>
+  <Fragment slot="js">
+  ```js
+  // src/cartStore.js
+  ...
+  export function addCartItem({ id, name, imageSrc }) {
+    const existingEntry = cartItems.get()[id];
+    if (existingEntry) {
+      cartItems.setKey(id, {
+        ...existingEntry,
+        quantity: existingEntry.quantity + 1,
+      })
+    } else {
+      cartItems.setKey(
+        id,
+        { id, name, imageSrc, quantity: 1 }
+      );
+    }
   }
-}
-```
-</Fragment>
-<Fragment slot="panel.ts">
-```ts
-// src/cartStore.ts
-...
-type ItemDisplayInfo = Pick<CartItem, 'id' | 'name' | 'imageSrc'>;
-export function addCartItem({ id, name, imageSrc }: ItemDisplayInfo) {
-  const existingEntry = cartItems.get()[id];
-  if (existingEntry) {
-    cartItems.setKey(id, {
-      ...existingEntry,
-      quantity: existingEntry.quantity + 1,
-    });
-  } else {
-    cartItems.setKey(
-      id,
-      { id, name, imageSrc, quantity: 1 }
-    );
+  ```
+  </Fragment>
+  <Fragment slot="ts">
+  ```ts
+  // src/cartStore.ts
+  ...
+  type ItemDisplayInfo = Pick<CartItem, 'id' | 'name' | 'imageSrc'>;
+  export function addCartItem({ id, name, imageSrc }: ItemDisplayInfo) {
+    const existingEntry = cartItems.get()[id];
+    if (existingEntry) {
+      cartItems.setKey(id, {
+        ...existingEntry,
+        quantity: existingEntry.quantity + 1,
+      });
+    } else {
+      cartItems.setKey(
+        id,
+        { id, name, imageSrc, quantity: 1 }
+      );
+    }
   }
-}
-```
-</Fragment>
-</Tabs>
+  ```
+  </Fragment>
+</JavascriptFlavorTabs>
 
 :::note
 <details>
