--- a/src/content/docs/zh-cn/reference/api-reference.mdx
+++ b/src/content/docs/zh-cn/reference/api-reference.mdx
@@ -2,7 +2,7 @@
 title: API 参考
 ---
 import Since from '~/components/Since.astro';
-import Tabs from '~/components/tabs/Tabs';
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
 ## `Astro`
@@ -494,26 +494,23 @@ import { Code } from 'astro/components';
 
 要安装 `Prism` 高亮器组件, 需要**先安装** `@astrojs/prism` 包：
 
-<Tabs client:visible>
-  <Fragment slot="tab.1.npm">npm</Fragment>
-  <Fragment slot="tab.2.yarn">yarn</Fragment>
-  <Fragment slot="tab.3.pnpm">pnpm</Fragment>
-  <Fragment slot="panel.1.npm">
+<PackageManagerTabs>
+  <Fragment slot="npm">
   ```shell
   npm i @astrojs/prism
   ```
   </Fragment>
-  <Fragment slot="panel.2.yarn">
-  ```shell
-  yarn add @astrojs/prism
-  ```
-  </Fragment>
-  <Fragment slot="panel.3.pnpm">
+  <Fragment slot="pnpm">
   ```shell
   pnpm i @astrojs/prism
   ```
   </Fragment>
-</Tabs>
+  <Fragment slot="yarn">
+  ```shell
+  yarn add @astrojs/prism
+  ```
+  </Fragment>
+</PackageManagerTabs>
 :::
 
 ```astro
