Add PackageManagerTabs and fix translation

--- a/src/pages/pl/editor-setup.mdx
+++ b/src/pages/pl/editor-setup.mdx
@@ -5,8 +5,7 @@ description: Skonfiguruj swój edytor kodu do tworzenia razem z Astro.
 i18nReady: true
 ---
 import Badge from '~/components/Badge.astro';
-
-
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Dostosuj swój edytor kodu, aby poprawić swoje doświadczenie dewelopera Astro i odblokować nowe funkcje.
 
@@ -14,7 +13,7 @@ Dostosuj swój edytor kodu, aby poprawić swoje doświadczenie dewelopera Astro 
 
 [VS Code](https://code.visualstudio.com/)  to popularny edytor kodu dla twórców stron internetowych, zbudowany przez Microsoft. Silnik VS Code zasila również popularne edytory kodu w przeglądarce, takie jak [GitHub Codespaces](https://github.com/features/codespaces) i [Gitpod](https://gitpod.io/)
 
-Astro działa z każdym edytorem kodu. Jednak VS Code jest naszym zalecanym edytorem dla projektów Astro. Utrzymujemy oficjalne rozszerzenie [Astro VS Code](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode), które pozwala na korzystanie z kilku kluczowych funkcji i usprawnień dla deweloperów w projektach Astro.
+Astro działa z każdym edytorem kodu. Jednak VS Code jest naszym zalecanym edytorem. Utrzymujemy oficjalne rozszerzenie [Astro VS Code](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode), które pozwala na korzystanie z kilku kluczowych funkcji i usprawnień dla deweloperów w projektach Astro.
 
 - Podświetlanie składni dla plików `.astro`.
 - Informacje o typach TypeScript dla plików `.astro`.
@@ -61,9 +60,24 @@ Zobacz [podręcznik użytkownika projektu](https://ota-meshi.github.io/eslint-pl
 
 Aby zacząć, najpierw zainstaluj Prettier i naszą wtyczkę:
 
-```shell
-npm install --save-dev prettier prettier-plugin-astro
-```
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm install --save-dev prettier prettier-plugin-astro
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm install -D prettier prettier-plugin-astro
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn add --dev prettier prettier-plugin-astro
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
 
 Prettier będzie wtedy automatycznie wykrywał plugin i używał go do przetwarzania plików `.astro`, gdy go uruchomisz:
 
