Add Community link to migrate from Hugo

--- a/src/pages/en/guides/migrate-to-astro/from-hugo.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-hugo.mdx
@@ -64,4 +64,4 @@ To convert other types of sites, such as a portfolio or documentation site, see 
 
 ## Community Resources
 
-- Add your own!
+- Blog Post: [Hugo Vs Astro - Which Static Site Generator To Choose In 2023](https://onebite.dev/hugo-vs-astro-which-static-site-generator-to-choose-in-2023/).
