--- a/src/pages/zh-cn/getting-started.mdx
+++ b/src/pages/zh-cn/getting-started.mdx
@@ -9,24 +9,24 @@ import ContributorList from '../../components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 :::tip[Astro v2 已经发布!]
-**Astro v2 有什么新功能？** [在公告的博客文章中找到答案](https://astro.build/blog/astro-2/)。  
+**Astro v2 有什么新功能？** [在发布的博文中找到答案](https://astro.build/blog/astro-2/)。  
 **准备好升级了吗？** [遵循我们的升级指南](/en/guides/upgrade-to/v2/)。
 :::
 
 <h2>Astro 是什么？</h2>
 
-Astro 是一个**一体式**的**web框架**，用于构建**快速**，**以内容为中心**的网站。
+Astro 是**集多功能于一体的Web框架**，用于构建**快速、以内容为中心**的网站。
 
 ## 主要特性
 
-- **Component Islands:** A new web architecture for building faster websites.
-- **Server-first API design:** Move expensive hydration off of your users' devices.
-- **Zero JS, by default:** No JavaScript runtime overhead to slow you down.
-- **Edge-ready:** Deploy anywhere, even a global edge runtime like Deno or Cloudflare.
-- **Customizable:** Tailwind, MDX, and 100+ other integrations to choose from.
-- **UI-agnostic:** Supports React, Preact, Svelte, Vue, Solid, Lit and more.
+- **组件群岛:** 用于构建更快网站的新web架构。
+- **服务器优先的API设计:** 从用户设备上去除高成本的 Hydration。
+- **默认零JS:** 没有JavaScript运行时开销来减慢你的速度。
+- **边缘就绪:** 在任何地方部署，甚至像 Deno 或 Cloudflare 这样的全球边缘运行时。
+- **可定制:** Tailwind, MDX 和100多个其他集成可供选择。
+- **不依赖特定UI:** 支持 React, Preact, Svelte, Vue, Solid, Lit 等等。
 
-Check out our detailed [Why Astro](/en/concepts/why-astro/) breakdown to learn more about what makes Astro special. ✨
+有关 Astro 功能的详细信息，请查阅[为什么选择 Astro](/zh-cn/concepts/why-astro/)的详细说明。✨
 
 
 ## 在你的浏览器尝试 Astro
@@ -34,8 +34,8 @@ Check out our detailed [Why Astro](/en/concepts/why-astro/) breakdown to learn m
 打开 [astro.new](https://astro.new/)，从中挑选一个入门模板，然后就可以在浏览器中体验完全可用的 Astro 了！
 
 <div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
-  <Button href="https://astro.new/basics?on=stackblitz">Launch basic template</Button>
-  <Button variant="outline" href="https://astro.new/">View all templates →</Button>
+  <Button href="https://astro.new/basics?on=stackblitz">启动基础模板</Button>
+  <Button variant="outline" href="https://astro.new/">查看所有模板 →</Button>
 </div>
 
 ## 开始你的第一个项目
