Feat: Update of the page compared to the English version

--- a/src/pages/fr/core-concepts/astro-pages.mdx
+++ b/src/pages/fr/core-concepts/astro-pages.mdx
@@ -12,19 +12,21 @@ Les **pages** sont des fichiers qui se trouvent dans le sous-répertoire `src/pa
 Astro prend en charge les types de fichiers suivants dans le répertoire `src/pages/` :
 - [`.astro`](#pages-astro)
 - [`.md`](#pages-markdownmdx)
-- `.mdx` (avec l'[Intégration MDX installée](/fr/guides/integrations-guide/mdx/#installation))
+- `.mdx` (avec l'[intégration MDX installée](/fr/guides/integrations-guide/mdx/#installation))
 - [`.html`](#pages-html)
 - `.js`/`.ts` (comme [endpoints](/fr/core-concepts/endpoints/))
 
 ## Routage basé sur les fichiers
 
-Astro utilise une stratégie de routage appelée **routage par fichier**. Chaque fichier de votre répertoire `src/pages/` devient un point d'accès sur votre site en fonction de son chemin d'accès.
+Astro utilise une stratégie de routage appelée **routage basé sur les fichiers**. Chaque fichier de votre répertoire `src/pages/` devient un point d'accès sur votre site en fonction de son chemin d'accès.
+
+Un seul fichier peut également générer plusieurs pages en utilisant le [routage dynamique](/fr/core-concepts/routing/#routes-dynamiques). Cela vous permet de créer des pages même si votre contenu se trouve en dehors du répertoire spécial `/pages/`, par exemple dans une [collection de contenu](/fr/guides/content-collections/) ou un [CMS](/fr/guides/cms/).
 
 📚 En savoir plus sur [Le routage dans Astro](/fr/core-concepts/routing/).
 
 ### Lien entre les pages
 
-Rédigez des [éléments HTML `<a>`](https://developer.mozilla.org/fr/docs/Web/HTML/Element/a) standard dans votre modèle de composant pour créer des liens entre les pages.
+Écrivez des éléments HTML standard [`<a>`](https://developer.mozilla.org/fr/docs/Web/HTML/Element/a) dans vos pages Astro pour créer des liens vers d'autres pages de votre site.
 
 ## Pages Astro
 
@@ -44,7 +46,7 @@ Les pages Astro utilisent l'extension de fichier `.astro` et prennent en charge 
 </html>
 ```
 
-Pour éviter de répéter les mêmes éléments HTML sur chaque page, vous pouvez déplacer les éléments communs `<head>` et `<body>` dans vos propres [Composants Layout](/fr/core-concepts/layouts/). Vous pouvez utiliser autant de Composants Layout que vous le souhaitez.
+Pour éviter de répéter les mêmes éléments HTML sur chaque page, vous pouvez déplacer les éléments communs `<head>` et `<body>` dans vos propres [composants de mise en page](/fr/core-concepts/layouts/). Vous pouvez utiliser autant, ou aussi peu de composants de mise en page que vous le souhaitez.
 
 ```astro {3} /</?MySiteLayout>/
 ---
@@ -56,13 +58,15 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 </MySiteLayout>
 ```
 
-📚 En savoir plus sur les [Composants Layout](/fr/core-concepts/layouts/) dans Astro.
+📚 En savoir plus sur les [composants de mise en page](/fr/core-concepts/layouts/) dans Astro.
 
 ## Pages Markdown/MDX
 
 Astro traite également tous les fichiers Markdown (`.md`) contenus dans `src/pages/` comme des pages de votre site Web final. Si vous avez [installé l'intégration MDX](/fr/guides/integrations-guide/mdx/#installation), les fichiers MDX (`.mdx`) sont traités de la même manière. Ces fichiers sont généralement utilisés pour les pages contenant beaucoup de texte, comme les articles de blog et la documentation.
 
-Les Composants Layout sont particulièrement utiles pour les [fichiers Markdown](#pages-markdownmdx). Les fichiers Markdown peuvent utiliser la propriété spéciale `layout` du Frontmatter pour spécifier un [Composant Layout](/fr/core-concepts/layouts/) qui enveloppera leur contenu Markdown dans un document page complet `<html>...</html>`.
+Les [collections de contenu de pages Markdown ou MDX](/fr/guides/content-collections/) dans `src/content/` peuvent être utilisées pour [générer des pages dynamiquement](/fr/core-concepts/routing/#routes-dynamiques).
+
+Les mises en page sont particulièrement utiles pour les [fichiers Markdown](#pages-markdownmdx). Les fichiers Markdown peuvent utiliser la propriété frontmatter spéciale `layout` pour spécifier un [composant de mise en page](/fr/core-concepts/layouts/) qui enveloppera leur contenu Markdown dans un document page complet `<html>...</html>`.
 
 ```md {3}
 ---
@@ -80,7 +84,7 @@ Voici ma page, écrite en **Markdown**.
 
 ## Pages HTML
 
-Les fichiers portant l'extension `.html` peuvent être placés dans le répertoire `src/pages/` et utilisés directement comme pages sur votre site. Notez que certaines fonctionnalités clés d'Astro ne sont pas prises en charge dans les [Composants HTML](/fr/core-concepts/astro-components/).
+Les fichiers portant l'extension `.html` peuvent être placés dans le répertoire `src/pages/` et utilisés directement comme pages sur votre site. Notez que certaines fonctionnalités clés d'Astro ne sont pas prises en charge dans les [Composants HTML](/fr/core-concepts/astro-components/#composants-html).
 
 ## Page d'erreur 404 personnalisée
 
