--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -569,7 +569,7 @@ export function get({ redirect }: APIContext) {
 }
 ```
 
-See also: [Astro.redirect()](#astroredirect)
+See also: [`Astro.redirect()`](#astroredirect)
 
 ## `getStaticPaths()`
 
