--- a/src/pages/en/tutorial/1-setup/1.mdx
+++ b/src/pages/en/tutorial/1-setup/1.mdx
@@ -28,8 +28,9 @@ You can access the command line through a local terminal program for your operat
 
 ### Node.js
 
-For Astro to run on your system, you also need to have [**Node.js**](https://nodejs.org/en/) of version `v16.12.0` or later.
-First, check whether you already have Node.js installed and check the installed version. To do this, run the following command in your terminal:
+For Astro to run on your system, you will also need to have [**Node.js**](https://nodejs.org/en/) installed, version `v16.12.0` or later.
+
+To check to see whether you already have a compatible version (`v16.12.0` or higher) installed, run the following command in your terminal:
 
 ```sh
 node -v
@@ -38,10 +39,9 @@ node -v
 v16.14.0
 ```
 
-* If the command returns a version number higher than `v16.12.0`, you're good to go! 🎉 If not, you need to install the compatible Node.js version.
-* If the command returns an error message like `Command 'node' not found`, Node.js is not installed in your system.
+If the command returns a version number higher than `v16.12.0`, you're good to go!
 
-To install Node.js (or the compatible version), follow [this guide](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm).
+If the command returns an error message like `Command 'node' not found`, or a version number lower than `v16.12.0`, then you need to [install a compatible Node.js version](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm).
 
 ### Code Editor
 
