--- a/src/pages/en/guides/data-fetching.mdx
+++ b/src/pages/en/guides/data-fetching.mdx
@@ -106,106 +106,6 @@ const weather = json.data;
 
 ## Fetch from a Headless CMS
 
-Fetch remote content from your favorite CMS like Storyblok or WordPress!
+Astro components can fetch data from your favorite CMS and then render it as your page content. Using [dynamic routes](/en/core-concepts/routing/#dynamic-routes), components can even generate pages based on your CMS content.
 
-Astro components can fetch data from your CMS and then render it as your page content. Using [dynamic routes](/en/core-concepts/routing/#dynamic-routes), components can even generate pages based on your CMS content.
-
-Here are some examples of what this data fetching looks like in Astro, with links to full tutorials below.
-
-### Example: Storyblok API
-
-```astro
----
-// src/pages/index.astro
-// Fetch a list of your Storyblok page links using @storyblok/js
-import BaseLayout from '../layouts/BaseLayout.astro';
-import { storyblokInit, apiPlugin } from "@storyblok/js";
-
-const { storyblokApi } = storyblokInit({
-  accessToken: "MY_STORYBLOK_ACCESS_TOKEN",
-  use: [apiPlugin],
-});
-
-const { data } = await storyblokApi.get('cdn/links');
-const links = Object.values(data.links);
----
-<BaseLayout>
-  <h1>Astro + Storyblok</h1>
-  <ul>
-    {links.map(link => (
-      <li><a href={link.slug}>{link.name}</a></li>
-    ))}
-  </ul>
-</BaseLayout>
-```
-See the full tutorial [Add a Headless CMS to Astro in 5 Minutes](https://www.storyblok.com/tp/add-a-headless-cms-to-astro-in-5-minutes) to add Storyblok to your Astro project!
-
-### Example: WordPress + GraphQL
-
-```astro
----
-// src/pages/about.astro
-// Fetch your about page content from the WordPress API
-
-import BaseLayout from '../../layouts/BaseLayout.astro';
-
-const slug = 'about';
-const response = await fetch(import.meta.env.WORDPRESS_API_URL, {
-  method: 'POST',
-  headers: { 'Content-Type': 'application/json' },
-  body: `
-    {
-      page(id:"${slug}", idType:URI) {
-        title 
-        content 
-      }
-    }
-  `
-});
-const data = await response.json();
----
-<BaseLayout>
-  <h1>{data.title}</h1>
-  <article set:html={data.content} />
-</BaseLayout>
-```
-
-See the full tutorial [Building an Astro Website with WordPress as a Headless CMS](https://blog.openreplay.com/building-an-astro-website-with-wordpress-as-a-headless-cms) to add WordPress to your Astro Project! 
-
-### Example: Crystallize
-
-```astro title="src/pages/index.astro"
----
-// Fetch your catalogue paths from Crystallize GraphQL API
-
-import BaseLayout from '../../layouts/BaseLayout.astro';
-import { createClient } from '@crystallize/js-api-client';
-
-const apiClient = createClient({
-  tenantIdentifier: 'furniture'
-});
-
-const query = `
-  query getCataloguePaths{
-    catalogue(language: "en", path: "/shop") {
-      name
-      children {
-        name
-        path
-      }
-    }
-  }
-`
-const { data: { catalogue } } = await apiClient.catalogueApi(query)
----
-<BaseLayout>
-  <h1>{catalogue.name}</h1>
-  <nav>
-    <ul>
-      {catalogue.children.map(child => (
-        <li><a href={child.path}>{child.name}</a></li>
-      ))}
-    </ul>
-  </nav>
-</BaseLayout>
-```
+See our [CMS Guides](/en/guides/cms/) for full details on integrating Astro with headless CMSes including Storyblok, Contentful, and WordPress.
