Update new page for CC

--- a/src/content/docs/en/guides/cms/crystallize.mdx
+++ b/src/content/docs/en/guides/cms/crystallize.mdx
@@ -1,7 +1,7 @@
 ---
 title: Crystallize & Astro
 description: Add content to your Astro project using Crystallize as a CMS
-layout: ~/layouts/CMSLayout.astro
+type: cms
 stub: true
 service: Crystallize
 ---
