docs: remove redundant mention about node version

--- a/src/pages/en/tutorial/1-setup/1.mdx
+++ b/src/pages/en/tutorial/1-setup/1.mdx
@@ -30,7 +30,7 @@ You can access the command line through a local terminal program for your operat
 
 For Astro to run on your system, you will also need to have [**Node.js**](https://nodejs.org/en/) installed, version `v16.12.0` or later.
 
-To check to see whether you already have a compatible version (`v16.12.0` or higher) installed, run the following command in your terminal:
+To check to see whether you already have a compatible version installed, run the following command in your terminal:
 
 ```sh
 node -v
