docs: refactor nodejs installation steps for blog tutorial (#2593)
* docs: refactor nodejs installation steps for blog tutorial

* docs: revise node installation step to be more concise

* docs: remove redundant mention about node version

---------

Co-authored-by: Dan Jutan <danjutan@gmail.com>

--- a/src/pages/en/tutorial/1-setup/1.mdx
+++ b/src/pages/en/tutorial/1-setup/1.mdx
@@ -26,15 +26,22 @@ You will use a **command line (terminal)** to create your Astro project and to r
 
 You can access the command line through a local terminal program for your operating system. Common applications include **Terminal** (MacOS/Linux), **Command Prompt** (Windows), and **Termux** (Android). One of these will probably already be on your machine. 
 
-For Astro to run on your system, you will also need to have [**Node.js**](https://nodejs.org/en/) installed. To check to see whether you already have a compatible version (`v16.12.0` or higher) installed: 
+### Node.js
 
-1. Launch your terminal and type the following into the command line:
+For Astro to run on your system, you will also need to have [**Node.js**](https://nodejs.org/en/) installed, version `v16.12.0` or later.
 
-    ```sh
-    node -v
-    ```
+To check to see whether you already have a compatible version installed, run the following command in your terminal:
 
-2. If necessary, follow the instructions to [install Node.js](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm) via the command line.
+```sh
+node -v
+
+// Example output
+v16.14.0
+```
+
+If the command returns a version number higher than `v16.12.0`, you're good to go!
+
+If the command returns an error message like `Command 'node' not found`, or a version number lower than `v16.12.0`, then you need to [install a compatible Node.js version](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm).
 
 ### Code Editor
 
