--- a/src/pages/en/reference/directives-reference.mdx
+++ b/src/pages/en/reference/directives-reference.mdx
@@ -86,6 +86,20 @@ This is most helpful when using `fetch()`. For example, fetching old posts from 
 <article set:html={fetch('http://example/old-posts/making-soup.html')}></article>
 ```
 
+`set:html` can used on any tag and does not have to include HTML. For example, use with [`JSON.stringify()`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify) on a `<script>` tag to add a [JSON-LD](https://json-ld.org/) schema to your page
+
+```astro
+<script type="application/ld+json" set:html={JSON.stringify({
+  "@context": "https://schema.org/",
+  "@type": "Person",
+  name: "Houston",
+  hasOccupation: {
+    "@type": "Occupation",
+    name: "Astronaut"
+  }
+})}/>
+```
+
 ### `set:text`
 
 `set:text={string}` injects a text string into an element, similar to setting `el.innerText`. Unlike `set:html`, the `string` value that is passed is automatically escaped by Astro.
