--- a/src/pages/es/guides/configuring-astro.mdx
+++ b/src/pages/es/guides/configuring-astro.mdx
@@ -147,8 +147,16 @@ Esto puede ser útil si tienes scripts con nombres que podrían verse afectados 
 
 ## Variables de entorno
 
-Astro evalúa los archivos de configuración antes de cargar los demás archivos. Como tal, no puedes usar `import.meta.env` ni acceder a las variables de entorno que se establecieron en los archivos `.env`.
+Astro evalúa los archivos de configuración antes de cargar los demás archivos. Como tal, no puedes usar `import.meta.env` para acceder a las variables de entorno que se establecieron en los archivos `.env`.
+
 Puedes usar `process.env` en un archivo de configuración para acceder a otras variables de entorno, como las [establecidas por la CLI](/es/guides/environment-variables/#usando-la-cli).
+
+También puedes usar el [helper de Vite `loadEnv`](https://main.vitejs.dev/config/#using-environment-variables-in-config) para manualmente cargar los archivos `.env`.
+
+```astro title="astro.config.mjs"
+import { loadEnv } from "vite";
+const { SECRET_PASSWORD } = loadEnv(import.meta.env.MODE, process.cwd(), "");
+```
 
 ## Referencia de configuración
 
