--- a/src/pages/en/guides/integrations-guide/vercel.mdx
+++ b/src/pages/en/guides/integrations-guide/vercel.mdx
@@ -102,6 +102,26 @@ vercel deploy --prebuilt
 
 To configure this adapter, pass an object to the `vercel()` function call in `astro.config.mjs`:
 
+### analytics
+
+> **Type:** `boolean`
+> **Available for:** Serverless, Edge, Static
+
+You can enable [Vercel Analytics](https://vercel.com/analytics) (including Web Vitals and Audiences) by setting `analytics: true`. This will inject Vercel’s tracking scripts into all your pages.
+
+```js
+// astro.config.mjs
+import { defineConfig } from 'astro/config';
+import vercel from '@astrojs/vercel/serverless';
+
+export default defineConfig({
+  output: 'server',
+  adapter: vercel({
+    analytics: true
+  })
+});
+```
+
 ### includeFiles
 
 > **Type:** `string[]`
@@ -110,6 +130,7 @@ To configure this adapter, pass an object to the `vercel()` function call in `as
 Use this property to force files to be bundled with your function. This is helpful when you notice missing files.
 
 ```js
+// astro.config.mjs
 import { defineConfig } from 'astro/config';
 import vercel from '@astrojs/vercel/serverless';
 
@@ -133,6 +154,7 @@ When building for the Edge, all the dependencies get bundled in a single file to
 Use this property to exclude any files from the bundling process that would otherwise be included.
 
 ```js
+// astro.config.mjs
 import { defineConfig } from 'astro/config';
 import vercel from '@astrojs/vercel/serverless';
 
