--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -230,5 +230,5 @@ if (!product) {
 
 ### Server Endpoints
 
-A server endpoint, also known as an **API route**, is a special function that lives in a `.js` or `.ts` file within the `src/pages` folder. 
+A server endpoint, also known as an **API route**, is a special function exported from a `.js` or `.ts` file within the `src/pages` folder. 
 The function takes an [endpoint context](/en/reference/api-reference/#endpoint-context) and returns a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response). A powerful feature of SSR, API routes are able to securely execute code on the server side. To learn more, see our [Endpoints Guide](/en/core-concepts/endpoints/#server-endpoints-api-routes).
