--- a/src/pages/en/guides/cms/contentful.mdx
+++ b/src/pages/en/guides/cms/contentful.mdx
@@ -88,7 +88,7 @@ To connect with your Contentful space, install both of the following using the s
   </Fragment>
 </PackageManagerTabs>
 
-Next, create a new file called `contentful.ts` in `src/lib/` directory in your project.
+Next, create a new file called `appwrite.ts` in `src/lib/` directory in your project.
 
 ```ts title="src/lib/contentful.ts"
 import contentful from "contentful";
