--- a/src/pages/en/guides/deploy/vercel.mdx
+++ b/src/pages/en/guides/deploy/vercel.mdx
@@ -17,6 +17,8 @@ Your Astro project can be deployed to Vercel as a static site, or as a server-si
 
 Your Astro project is a static site by default. You don’t need any extra configuration to deploy a static Astro site to Vercel. 
 
+:::tip[Upgrading to Astro v2.0] Astro v2.0 drops support for Node 14, so make sure your project is using **Node `16.12.0` or later**. You can [define the Node.js version used in the Build Step and Serverless Functions in Project Settings](https://vercel.com/changelog/node-js-version-now-customizable-in-the-project-settings). :::
+
 ### Adapter for SSR
 
 To enable SSR in your Astro project and deploy on Vercel:
