--- a/src/pages/es/reference/errors/page-number-param-not-found.mdx
+++ b/src/pages/es/reference/errors/page-number-param-not-found.mdx
@@ -16,4 +16,4 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 El parámetro número de página no fue encontrado en su ruta de archivo.
 
 **See Also:**
--  [Pagination](/es/core-concepts/routing/#paginacion)
+-  [Pagination](/es/core-concepts/routing/#paginación)
