--- a/src/pages/en/guides/deploy/cloudflare.mdx
+++ b/src/pages/en/guides/deploy/cloudflare.mdx
@@ -136,4 +136,4 @@ If you're encountering errors, double-check the version of `node` you're using l
 
 Cloudflare requires [Node v16.13](https://miniflare.dev/get-started/cli#installation), which is a more recent version than Astro’s out-of-the-box minimum, so double check you’re using at least v16.13.
 
-When your client-side code is not working as expected after deploying your site and you see `Hydration completed but contains mismatches` in the console, make sure to check your Auto Minify under Cloudflare settings. Client-side hydration may fail as a result of this optimization setting.
+Client-side hydration may fail as a result of Cloudflare's Auto Minify setting. If you see `Hydration completed but contains mismatches` in the console, make sure to disable Auto Minify under Cloudflare settings.
