--- a/src/pages/en/guides/deploy/cloudflare.mdx
+++ b/src/pages/en/guides/deploy/cloudflare.mdx
@@ -135,3 +135,5 @@ To get started, create a `/functions` directory at the root of your project. Wri
 If you're encountering errors, double-check the version of `node` you're using locally (`node -v`) matches the version you're specifying in the environment variable.
 
 Cloudflare requires [Node v16.13](https://miniflare.dev/get-started/cli#installation), which is a more recent version than Astro’s out-of-the-box minimum, so double check you’re using at least v16.13.
+
+Client-side hydration may fail as a result of Cloudflare's Auto Minify setting. If you see `Hydration completed but contains mismatches` in the console, make sure to disable Auto Minify under Cloudflare settings.
