add supabase / firebase

--- a/src/pages/en/guides/baas/google-firebase.mdx
+++ b/src/pages/en/guides/baas/google-firebase.mdx
@@ -3,7 +3,11 @@ title: Firebase & Astro
 description: Add authentication, storage, and realtime data to your Astro application. Extend those capabilities with the full Google Cloud Platform
 layout: ~/layouts/BackendAsAServiceLayout.astro
 service: Firebase
-stub: false
+stub: true
 ---
 
-Stuff about firebase
+[Firebase](https://firebase.google.com/) is an app development platform that helps you build and grow apps and games users love. Backed by Google and trusted by millions of businesses around the world.
+
+## Hosting Resources
+
+- Check out [Deploy your Astro Site to Google’s Firebase Hosting](https://docs.astro.build/en/guides/deploy/google-firebase/)
