--- a/src/pages/en/guides/deploy/vercel.mdx
+++ b/src/pages/en/guides/deploy/vercel.mdx
@@ -84,4 +84,5 @@ You can use `vercel.json` to override the default behavior of Vercel and to conf
 📚 Learn more about [Vercel’s project configuration](https://vercel.com/docs/project-configuration).
 
 ### Upgrading to Astro 2.0
-Astro v2.0 drops support for Node 14, so make sure your project is using **Node `16.12.0` or later**. You can define the Node.js version used in the [Build Step and Serverless Functions section](https://vercel.com/changelog/node-js-version-now-customizable-in-the-project-settings) in Project Settings.
+
+Astro v2.0 drops support for Node 14, so make sure your project is using **Node `16.12.0` or later**. You can [define the Node.js version](https://vercel.com/changelog/node-js-version-now-customizable-in-the-project-settings) used during the Build Step and Serverless Functions from the General page under Project Settings.
