--- a/src/pages/es/editor-setup.mdx
+++ b/src/pages/es/editor-setup.mdx
@@ -34,7 +34,7 @@ Nuestra increíble comunidad mantiene extensiones para otros editores de código
 
 ### IDE de JetBrains
 
-El soporte inicial para Astro llegó a Webstorm 2023.1 (por el momento en acceso temprano). Puedes instalar el plugin oficial atraves de la [página de plugins de Jetbrains](https://plugins.jetbrains.com/plugin/20959-astro) o buscando "Astro" en la pestaña de Plugins y beneficiarte de las funciones como resaltado de sintaxis, autocompletado de código y formateo, con planes para agregar más funciones avanzadas en el futuro. También está disponible para las otras [IDEs de Jetabrains con soporte para Javascript](https://www.jetbrains.com/products/#lang=js&type=ide).
+El soporte inicial para Astro llegó a Webstorm 2023.1 (por el momento en acceso temprano). Puedes instalar el plugin oficial a través de la [página de plugins de Jetbrains](https://plugins.jetbrains.com/plugin/20959-astro) o buscando "Astro" en la pestaña de Plugins y beneficiarte de las funciones tales como resaltado de sintaxis, formateo y autocompletado de código, con planes para agregar más funciones avanzadas en el futuro. También está disponible para las otras [IDEs de Jetbrains con soporte para Javascript](https://www.jetbrains.com/products/#lang=js&type=ide).
 
 El próximo [Fleet IDE](https://www.jetbrains.com/fleet/) de JetBrains también soportará servidores de lenguaje y, como consecuencia, nuestras herramientas actuales podrán ejecutarse allí sin ningún problema.
 
