--- a/src/pages/es/guides/data-fetching.mdx
+++ b/src/pages/es/guides/data-fetching.mdx
@@ -108,4 +108,4 @@ const weather = json.data
 
 Los componentes de Astro pueden obtener datos desde tu CMS favorito y luego renderizarlos como contenido en tu página. Usando [rutas dinámicas](/es/core-concepts/routing/#rutas-dinámicas), los componentes pueden generar páginas basadas en el contenido obtenido del CMS.
 
-Ve nuestras [guías de CMS](/es/guides/cms/) para obtener más detalles sobre como integrar Astro con el headless CMS incluyendo Stroyblok, Contentful y WordPress.
+Ve nuestras [guías de CMS](/es/guides/cms/) para obtener más detalles sobre cómo integrar Astro con un headless CMS incluyendo Stroyblok, Contentful y WordPress.
