--- a/src/pages/es/reference/api-reference.mdx
+++ b/src/pages/es/reference/api-reference.mdx
@@ -226,7 +226,7 @@ Una página (no un componente hijo) debe `return`(devolver) el resultado de `Ast
 ---
 import { isLoggedIn } from '../utils';
 const cookie = Astro.request.headers.get('cookie');
-// If the user is not logged in, redirect them to the login page
+// Si el usuario no está logueado, redirígelo a la página de login
 if (!isLoggedIn(cookie)) {
   return Astro.redirect('/login');
 }
