--- a/src/pages/es/guides/configuring-astro.mdx
+++ b/src/pages/es/guides/configuring-astro.mdx
@@ -151,7 +151,7 @@ Astro evalúa los archivos de configuración antes de cargar los demás archivos
 
 Puedes usar `process.env` en un archivo de configuración para acceder a otras variables de entorno, como las [establecidas por la CLI](/es/guides/environment-variables/#usando-la-cli).
 
-También puedes usar el [helper de Vite `loadEnv`](https://main.vitejs.dev/config/#using-environment-variables-in-config) para manualmente cargar los archivos `.env`.
+También puedes usar el [helper de Vite `loadEnv`](https://main.vitejs.dev/config/#using-environment-variables-in-config) para cargar los archivos `.env` manualmente.
 
 ```astro title="astro.config.mjs"
 import { loadEnv } from "vite";
