--- a/src/pages/es/guides/images.mdx
+++ b/src/pages/es/guides/images.mdx
@@ -306,9 +306,9 @@ const {src, ...attrs} = Astro.props;
 </style>
 ```
 
-### Usar la etiqueta `<img />` con la integración de imágenes 
+### Usar la etiqueta `<img>` con la integración de imágenes 
 
-La integración oficial de imágenes cambiará las importaciones de imágenes para devolver un objeto en lugar una cadena de origen.
+La integración oficial de imágenes cambia las importaciones de imágenes para devolver un objeto en lugar de un string de origen.
 El objeto tiene las siguientes propiedades, derivadas desde un archivo importado:
 ```ts
 {
@@ -328,7 +328,7 @@ import rocket from '../images/rocket.svg';
 <img src={rocket.src} alt="A rocketship in space."/>
 ```
 
-Alternativamente, agrega `?url` a tus importaciones para decirles que devuelvan una cadena de origen.
+Alternativamente, agrega `?url` a tus importaciones para indicarles que devuelvan un string de origen.
 
 ```astro "?url"
 ---
