--- a/src/pages/es/guides/server-side-rendering.mdx
+++ b/src/pages/es/guides/server-side-rendering.mdx
@@ -105,9 +105,9 @@ Astro seguirá siendo un generador de sitios estáticos por defecto. Pero una ve
 
 Since v="2.0.0" />
 
-Para habilitar **renderizado híbrido**, cualquier [página](/es/core-concepts/astro-pages/) o [endpoint del servidor](/es/core-concepts/endpoints/#endpoints-del-servidor-rutas-de-api) que tienen soporte para exportar variables (`.astro`, `.mdx`, `.ts`, or `.js`) y puedes optar por el prerenderizado. Estos archivos se renderizarán estáticamente en tiempo de compilación, similar al modo estático por defecto [`output`](/es/reference/configuration-reference/#output).
+Para habilitar **renderizado híbrido**, cualquier [página](/es/core-concepts/astro-pages/) o [endpoint del servidor](/es/core-concepts/endpoints/#endpoints-del-servidor-rutas-de-api) que tienen soporte para exportar variables (`.astro`, `.mdx`, `.ts`, or `.js`) puede optar por el prerenderizado. Estos archivos se renderizarán estáticamente en tiempo de compilación, similar al modo estático por defecto [`output`](/es/reference/configuration-reference/#output).
 
-Simplemente agrega `export const prerender = true`
+Simplemente agrega `export const prerender = true`:
 
 ```astro title="src/pages/index.astro" {2}
 ---
