--- a/src/pages/en/guides/deploy/vercel.mdx
+++ b/src/pages/en/guides/deploy/vercel.mdx
@@ -82,3 +82,7 @@ After your project has been imported and deployed, all subsequent pushes to bran
 You can use `vercel.json` to override the default behavior of Vercel and to configure additional settings. For example, you may wish to attach headers to HTTP responses from your Deployments. 
 
 📚 Learn more about [Vercel’s project configuration](https://vercel.com/docs/project-configuration).
+
+### Upgrading to Astro 2.0
+
+Astro v2.0 drops support for Node 14, so make sure your project is using **Node `16.12.0` or later**. You can [define the Node.js version](https://vercel.com/changelog/node-js-version-now-customizable-in-the-project-settings) used during the Build Step and Serverless Functions from the General page under Project Settings.
