i18n(zh-cn): Update publish-to-npm.mdx

--- a/src/pages/zh-cn/reference/publish-to-npm.mdx
+++ b/src/pages/zh-cn/reference/publish-to-npm.mdx
@@ -43,13 +43,13 @@ pnpm create astro@latest my-new-component-directory -- --template component
 <FileTree>
 - my-new-component-directory/
   - demo/
-    - ... for testing and demonstration
+    - ... 测试和文档
   - package.json
   - packages/
     - my-component/
       - index.js
       - package.json
-      - ... additional files used by the package
+      - ... 其他模块所使用的文件
 </FileTree>
 
 我们将在这个名叫 `my-project` 的示例中创建名为 `my-component` 的单一模块以及一个用于测试并展示组件的 `demo/` 目录。
