--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -477,7 +477,7 @@ You can customize these heading IDs by adding a rehype plugin that injects `id` 
 
 By default, Astro injects `id` attributes after your rehype plugins have run. If one of your custom rehype plugins needs to access the IDs injected by Astro, you can import and use Astro’s `rehypeHeadingIds` plugin directly. Be sure to add `rehypeHeadingIds` before any plugins that rely on it:
 
-```js title="astro.config.mjs"
+```js title="astro.config.mjs" ins={2, 7}
 import { defineConfig } from 'astro/config';
 import { rehypeHeadingIds } from '@astrojs/markdown-remark';
 
@@ -665,6 +665,7 @@ Shiki is enabled by default, preconfigured with the `github-dark` theme. The com
 #### Shiki configuration
 
 Shiki is our default syntax highlighter. You can configure all options via the `shikiConfig` object like so:
+
 ```js title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
 
