--- a/src/pages/en/guides/integrations-guide/vercel.mdx
+++ b/src/pages/en/guides/integrations-guide/vercel.mdx
@@ -104,8 +104,9 @@ To configure this adapter, pass an object to the `vercel()` function call in `as
 
 ### analytics
 
-> **Type:** `boolean`
-> **Available for:** Serverless, Edge, Static
+**Type:** `boolean`<br/>
+**Available for:** Serverless, Edge, Static<br/>
+**Added in:** `@astrojs/vercel@3.1.0`
 
 You can enable [Vercel Analytics](https://vercel.com/analytics) (including Web Vitals and Audiences) by setting `analytics: true`. This will inject Vercel’s tracking scripts into all your pages.
 
@@ -124,8 +125,8 @@ export default defineConfig({
 
 ### includeFiles
 
-> **Type:** `string[]`
-> **Available for:** Edge, Serverless
+**Type:** `string[]`<br/>
+**Available for:** Edge, Serverless
 
 Use this property to force files to be bundled with your function. This is helpful when you notice missing files.
 
@@ -148,8 +149,8 @@ When building for the Edge, all the dependencies get bundled in a single file to
 
 ### excludeFiles
 
-> **Type:** `string[]`
-> **Available for:** Serverless
+**Type:** `string[]`<br/>
+**Available for:** Serverless
 
 Use this property to exclude any files from the bundling process that would otherwise be included.
 
