testing page translation

--- a/src/pages/ru/guides/environment-variables.mdx
+++ b/src/pages/ru/guides/environment-variables.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ~/layouts/MainLayout.astro
 title: Использование переменных окружения
-description: Learn how to use environment variables in an Astro project.
+description: Узнайте как использовать переменные окружения в проекте Astro.
 i18nReady: true
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
