applied suggestions pt 2

--- a/src/pages/es/guides/images.mdx
+++ b/src/pages/es/guides/images.mdx
@@ -319,7 +319,7 @@ El objeto tiene las siguientes propiedades, derivadas desde un archivo importado
 }
 ```
 
-Si tienes la integración de imágenes instalada, refierete a la propiedad `src` del objeto cuando uses la etiquete `<img />`.
+Si tienes la integración de imágenes instalada, usa a la propiedad `src` del objeto cuando utilices la etiqueta `<img>`.
 
 ```astro ".src"
 ---
