--- a/src/pages/zh-cn/getting-started.mdx
+++ b/src/pages/zh-cn/getting-started.mdx
@@ -69,13 +69,13 @@ Astro 是**集多功能于一体的 Web 框架**，用于构建**快速、以内
 
 ## 学习 Astro
 
-看看 Astro 网站的一些关键概念和模式的例子!
+查看 Astro 网站的一些关键概念和模式的示例!
 
-📚 阅读更多关于 Astro 的[项目结构](/zh-cn/core-concepts/project-structure/)。
+📚 [添加第一个页面](/zh-cn/core-concepts/astro-pages/)到你的网站。
 
-📚 了解 Astro 的[模板指令](/zh-cn/reference/directives-reference/)。
+📚 阅读更多关于 Astro [项目结构](/zh-cn/core-concepts/project-structure/)的信息。
 
-📚 探索 Astro 的[运行时 API](/zh-cn/reference/api-reference/)。
+📚 了解 Astro [基于文件的路由](/zh-cn/core-concepts/routing/)。
 
 *... 在**参考资料**下找到更多资料。*
 
