--- a/src/pages/en/guides/cms/storyblok.mdx
+++ b/src/pages/en/guides/cms/storyblok.mdx
@@ -503,4 +503,4 @@ Now, whenever you publish a new story, a new build will be triggered and your bl
 
 ## Community Resources 
 
-- Add yours!
+- [Getting the Visual Editor to work for Storyblok + Astro](https://dev.to/sandrarodgers/getting-the-visual-editor-to-work-for-storyblok-astro-2gja) by Sandra Rodgers
