--- a/src/pages/en/guides/integrations-guide.mdx
+++ b/src/pages/en/guides/integrations-guide.mdx
@@ -122,7 +122,7 @@ integrations: [
 
 ## Removing an Integration
 
-To remove an integration, first uninstall the integration from you project
+To remove an integration, first uninstall the integration from your project
 
 <PackageManagerTabs>
   <Fragment slot="npm">
