fix: anchor links in german

--- a/src/pages/de/guides/migrate-to-astro.mdx
+++ b/src/pages/de/guides/migrate-to-astro.mdx
@@ -26,7 +26,7 @@ Abhängig von Deinem bestehenden Projekt kannst Du möglicherweise eins der folg
 
 - [CSS Stylesheets oder Bibliotheken](/de/guides/styling/) inklusive Tailwind.
 
-- [Markdown/MDX Dateien](/de/guides/markdown-content/), konfiguriert unter Verwendung Deiner bestehenden [remark und rehype Plugins](/de/guides/markdown-content/#configuring-markdown-and-mdx).
+- [Markdown/MDX Dateien](/de/guides/markdown-content/), konfiguriert unter Verwendung Deiner bestehenden [remark und rehype Plugins](/de/guides/markdown-content/#markdown-konfigurieren).
 
 - [Inhalte aus einem CMS](/de/guides/cms/) mittels Integrationen oder einer API.
 
@@ -42,7 +42,7 @@ Astro bietet die Möglichkeit, zwischen einer statisch generierten Website und [
 
 Je nach Struktur Deines bestehenden Projektes musst Du möglicherweise über folgende Dinge nachdenken:
 
-- Gestaltung in [Astro-Inseln](/de/concepts/islands/#what-is-an-astro-island), um das Senden von unnötigem JavaScript an den Browser zu vermeiden.
+- Gestaltung in [Astro-Inseln](/de/concepts/islands/#was-ist-eine-astro-insel?), um das Senden von unnötigem JavaScript an den Browser zu vermeiden.
 
 - Bereitstellung von clientseitiger Interaktivität mit [clientseitigen `<script>` Tags](/de/guides/client-side-scripts/) oder [UI-Framework-Komponenten](/de/core-concepts/framework-components/).
 
