fix broken links by changing to lowercase

--- a/src/pages/zh-cn/reference/errors/static-redirect-not-available.mdx
+++ b/src/pages/zh-cn/reference/errors/static-redirect-not-available.mdx
@@ -13,7 +13,7 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 如要在静态网站上重定向，可以使用 [meta 标签的 refresh 属性](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta)。某些站点托管平台也会提供基于配置的重定向（例如：[Netlify 重定向](https://docs.netlify.com/routing/redirects/)）。
 
 **请参阅：**
--  [在您的项目中启用SSR](/zh-cn/guides/server-side-rendering/#启用-SSR)
+-  [在您的项目中启用SSR](/zh-cn/guides/server-side-rendering/#启用-ssr)
 -  [Astro.redirect](/zh-cn/guides/server-side-rendering/#astroredirect)
 
 
