--- a/src/pages/zh-cn/reference/errors/static-client-address-not-available.mdx
+++ b/src/pages/zh-cn/reference/errors/static-client-address-not-available.mdx
@@ -13,7 +13,7 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 如要在静态模式下获取用户的IP地址，您可以在[客户端脚本](/zh-cn/core-concepts/astro-components/#客户端脚本) 中使用类似于 [Ipify](https://www.ipify.org/) 等不同的API，或者您可以使用在服务提供商所托管的无服务器 (serverless) 函数来获取用户的IP。
 
 **请参阅：**
--  [在您的项目中启用SSR](/zh-cn/guides/server-side-rendering/#启用-SSR)
+-  [在您的项目中启用SSR](/zh-cn/guides/server-side-rendering/#启用-ssr)
 -  [Astro.clientAddress](/zh-cn/reference/api-reference/#astroclientaddress)
 
 
