Update Tip with suggestion
Co-authored-by: Dan Jutan <danjutan@gmail.com>

--- a/src/pages/en/guides/deploy/google-cloud.mdx
+++ b/src/pages/en/guides/deploy/google-cloud.mdx
@@ -73,7 +73,12 @@ CMD node ./dist/server/entry.mjs
 ```
 
 :::tip[Keep this in mind]
-These are just examples of Dockerfiles. You can customize them to your needs. For example, using `node:lts-alpine`
+These are just examples of Dockerfiles. You can customize them to your needs. For example, you could use another image, like `node:lts-alpine`.
+
+```docker title=".Dockerfile del={1} add={2}
+FROM node:lts as runtime
+FROM node:lts-alpine as runtime
+```
 :::
 
 #### 3. Deploying the container
