Update Astro Config examples to `defineConfig`

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -664,9 +664,10 @@ Shiki is enabled by default, preconfigured with the `github-dark` theme. The com
 
 Shiki is our default syntax highlighter. You can configure all options via the `shikiConfig` object like so:
 
-```js
-// astro.config.mjs
-export default {
+```js title="astro.config.mjs"
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
   markdown: {
     shikiConfig: {
       // Choose from Shiki's built-in themes (or add your own)
@@ -704,14 +705,15 @@ We also suggest reading [Shiki's own theme documentation](https://github.com/shi
 
 If you'd like to switch to `'prism'` by default, or disable syntax highlighting entirely, you can use the `markdown.syntaxHighlighting` config object:
 
-```js ins={5}
-// astro.config.mjs
-export default {
+```js title="astro.config.mjs" ins={6}
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
   markdown: {
     // Can be 'shiki' (default), 'prism' or false to disable highlighting
     syntaxHighlight: 'prism',
   },
-};
+});
 ```
 
 #### Prism configuration
