Use title instead of comment for file name

--- a/src/pages/en/guides/integrations-guide.mdx
+++ b/src/pages/en/guides/integrations-guide.mdx
@@ -144,8 +144,7 @@ To remove an integration, first uninstall the integration from your project
 
 Next, remove the integration from your `astro.config.*` file
 
-```js del={4,8}
-// astro.config.mjs
+```js title="astro.config.mjs" del={3,7}
 import { defineConfig } from 'astro/config'
 
 import image from "@astrojs/image";
